@@ -1,31 +1,34 @@
 package org.nextprot.api.core.dao;
 
-import static org.junit.Assert.assertEquals;
-
-import java.util.List;
-
+import com.github.springtestdbunit.annotation.DatabaseOperation;
+import com.github.springtestdbunit.annotation.DatabaseSetup;
 import org.junit.Test;
-import org.nextprot.api.commons.utils.Pair;
+import org.nextprot.api.core.domain.annotation.AnnotationProperty;
 import org.nextprot.api.core.test.base.CoreUnitBaseTest;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import com.github.springtestdbunit.annotation.DatabaseOperation;
-import com.github.springtestdbunit.annotation.DatabaseSetup;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 @DatabaseSetup(value = "BioPhyChemPropsDaoTest.xml", type = DatabaseOperation.INSERT)
-
 public class BioPhyChemPropsDaoTest extends CoreUnitBaseTest {
 
 	@Autowired private BioPhyChemPropsDao bpcpDao;
 	
 	@Test
 	public void testFindPropertiesByUniqueName() {
-		List<Pair<String, String>> props = this.bpcpDao.findPropertiesByUniqueName("NX_P12345");
+		List<AnnotationProperty> props = this.bpcpDao.findPropertiesByUniqueName("NX_P12345");
 		assertEquals(2, props.size());
-		assertEquals("absorption note", props.get(0).getFirst());
-		assertEquals("whatever", props.get(0).getSecond());
-		assertEquals("kinetic KM", props.get(1).getFirst());
-		assertEquals("whoever", props.get(1).getSecond());
+
+		assertEquals("kinetic KM", props.get(0).getName());
+		assertEquals("whoever", props.get(0).getValue());
+		assertEquals(501, props.get(0).getAnnotationId());
+
+		assertEquals("absorption note", props.get(1).getName());
+		assertEquals("whatever", props.get(1).getValue());
+		assertEquals(500, props.get(1).getAnnotationId());
+
 		
 		props = this.bpcpDao.findPropertiesByUniqueName("NX_P54321");
 		assertEquals(0, props.size());
